Sidebar collapsable, need 2 fix button position

--- a/Prototyping/Maybe/options.css
+++ b/Prototyping/Maybe/options.css
@@ -26,11 +26,11 @@
   }
   
   .main-content_large {
-    width: 55rem;
+    width: 98rem;
   }
   
   .sidebar_small {
-    width: 45rem;
+    width: 2rem;
     background-color: darkgreen;
   }
   
